feat: redesign logo and cleanup legacy assets

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <meta property="og:url" content="https://daily.byhooi.tk/">
     <meta property="og:site_name" content="每日积累">
     <meta property="og:locale" content="zh_CN">
-    <meta property="og:image" content="https://daily.byhooi.tk/assets/logo/logo.webp">
-    <meta property="og:image:secure_url" content="https://daily.byhooi.tk/assets/logo/logo.webp">
-    <meta property="og:image:type" content="image/webp">
+    <meta property="og:image" content="https://daily.byhooi.tk/assets/logo/logo.png">
+    <meta property="og:image:secure_url" content="https://daily.byhooi.tk/assets/logo/logo.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:image:alt" content="每日积累 Logo">
@@ -26,11 +26,11 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="每日积累 - 四年级上">
     <meta name="twitter:description" content="文学之美，点滴汇聚">
-    <meta name="twitter:image" content="https://daily.byhooi.tk/assets/logo/logo.webp">
+    <meta name="twitter:image" content="https://daily.byhooi.tk/assets/logo/logo.png">
 
     <!-- 网站图标 -->
-    <link rel="icon" href="assets/logo/favicon.ico" sizes="32x32">
-    <link rel="icon" href="assets/logo/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/logo/logo.png" sizes="any">
+    <link rel="icon" href="assets/logo/logo.png" type="image/png">
     <link rel="apple-touch-icon" href="assets/logo/apple-touch-icon.png">
     <link rel="manifest" href="assets/logo/site.webmanifest">
 
